refactor: code carries no comments besides Javadoc (ADR-0214) (#2074)
## Summary

The code base keeps **no comments besides Javadoc** from now on (new
ADR-0214). This PR removes every
other comment from every language in the repository, condenses the
Javadoc (and JSDoc and Python
docstrings) to short, precise contracts without history, and moves the
few durable facts that had
lived only in comments into the specs and docs where they belong.

| | Before | After |
| --- | --- | --- |
| Non-doc comment lines removed | — | ~65,000 |
| Java Javadoc lines | ~168,000 | ~82,000 |
| Javadoc blocks rewritten | — | 7,734 of 14,475 (the rest were already
short and history-free) |

## Why

The comments had become a second narrative next to the code that nothing
compiled, tested or
linted. Much of it was **history** — PR and issue numbers, dates, what
an earlier version did, which
incident a line was written after — and much of it restated reasoning
that already lives in commit
messages, PR bodies, ADRs and specs. A stale comment still reads as
authoritative, and this code
base had several (a comment claiming URL encoding that did not happen, a
CI comment attached to the
wrong step, a Javadoc promising coverage the test did not have). `git
log -p` and `git blame` are
dated and attributable; a comment is neither.

So the reasoning goes where it can be dated and reviewed — the commit
message and the PR body — and
durable facts go into the spec, the ADR, the runbook or the knowledge
base. The removed text is not
lost: it is in this PR's base commit (`git show <base>:<path>`).

## What stays in code

- **Javadoc** on every type and public/protected member (Checkstyle
still requires it). One summary
sentence, a contract sentence only when a caller needs it, then the
tags. No dates, PR numbers,
"previously"/"now", migration or incident stories, rationale essays. A
bare `REQ-…`/`ADR-…`
  pointer is allowed.
- **JSDoc** (its type tags drive `typecheckJs`, ADR-0125) and **Python
docstring